--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Astrologer Abhishek Sharma — Readings & Guidance</title>
+  <title>Astrologer basheer Khan — Readings & Guidance</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="assets/placeholder.jpg" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
