--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 
   <footer class="site-footer">
     <div class="container footer-inner">
-      <p>© <span id="year"></span> Astrologer Abhishek Sharma — All rights reserved.</p>
+      <p>© <span id="year"></span> Astrologer Basheer Khan — All rights reserved.</p>
       <div class="social">
         <a href="#" aria-label="WhatsApp">WhatsApp</a>
       
